--- a/index.html
+++ b/index.html
@@ -113,6 +113,29 @@
             font-size: 1.1em;
             color: #777777;
         }
+        .card a {
+            display: block;
+            margin-top: 15px;
+            text-decoration: none;
+            color: #555555;
+            font-weight: bold;
+            background: rgba(173, 216, 230, 0.8);
+            padding: 10px 15px;
+            text-align: center;
+            border-radius: 10px;
+            transition: background 0.3s, color 0.3s;
+        }
+        .card a:hover {
+            background: rgba(152, 251, 152, 0.8);
+            color: #333333;
+        }
+        .card .coming-soon {
+            display: block;
+            margin-top: 15px;
+            font-size: 1.1em;
+            color: #999999;
+            text-align: center;
+        }
         footer {
             text-align: center;
             padding: 20px;
@@ -151,26 +174,32 @@
             <div class="card">
                 <h3>AI Sentiment Analysis</h3>
                 <p>Track and analyze market sentiment with advanced AI algorithms.</p>
+                <a href="ai-sentiment-analysis.html">Learn More</a>
             </div>
             <div class="card">
                 <h3>Smart Portfolio Tracking</h3>
                 <p>Monitor your investments while maintaining emotional balance.</p>
+                <a class="coming-soon">Coming Soon</a>
             </div>
             <div class="card">
                 <h3>Market Insights</h3>
                 <p>Data-driven analysis with mental health considerations.</p>
+                <a class="coming-soon">Coming Soon</a>
             </div>
             <div class="card">
                 <h3>Community Rewards</h3>
                 <p>Earn $THRPY tokens for positive contributions.</p>
+                <a class="coming-soon">Coming Soon</a>
             </div>
             <div class="card">
                 <h3>Support Network</h3>
                 <p>Connect with like-minded traders and investors.</p>
+                <a class="coming-soon">Coming Soon</a>
             </div>
             <div class="card">
                 <h3>Mindfulness Tools</h3>
                 <p>Meditation and stress management resources.</p>
+                <a class="coming-soon">Coming Soon</a>
             </div>
         </div>
     </section>
