--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>$THRPY - Crypto Mental Wellness</title>
+    <meta property="og:title" content="$THRPY - Crypto Mental Wellness">
+    <meta property="og:description" content="A revolutionary platform combining mental wellness tools with advanced crypto analytics. Take control of your investments while maintaining emotional balance.">
+    <meta property="og:image" content="https://www.ai-thrpy.xyz/assets/images/og_image.jpg.jpg">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.ai-thrpy.xyz">
     <style>
         body {
             margin: 0;
@@ -25,7 +30,6 @@
             }
         }
 
-        
         .background-aurora {
             position: fixed;
             top: 0;
