--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>$THRPY - Crypto Mental Wellness</title>
     <meta property="og:title" content="$THRPY - Crypto Mental Wellness">
     <meta property="og:description" content="A revolutionary platform combining mental wellness tools with advanced crypto analytics. Take control of your investments while maintaining emotional balance.">
-    <meta property="og:image" content="https://www.ai-thrpy.xyz/assets/images/og_image.jpg.jpg">
+    <meta property="og:image" content="https://www.ai-thrpy.xyz/assets/images/og-image.png">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.ai-thrpy.xyz">
     <style>
