--- a/index.html
+++ b/index.html
@@ -197,41 +197,48 @@
     </header>
 
     <section class="features">
-        <h2>Platform Features</h2>
+        <h2>Explore Features</h2>
         <div class="grid">
             <div class="card">
-                <h3>AI Sentiment Analysis</h3>
-                <p>Track and analyze market sentiment with advanced AI algorithms.</p>
-                <a class="button" href="ai-sentiment-analysis.html">Learn More</a>
-            </div>
-            <div class="card">
-                <h3>Smart Portfolio Tracking</h3>
-                <p>Monitor your investments while maintaining emotional balance.</p>
-                <a class="coming-soon">Coming Soon</a>
-            </div>
-            <div class="card">
-                <h3>Market Insights</h3>
-                <p>Data-driven analysis with mental health considerations.</p>
-                <a class="coming-soon">Coming Soon</a>
-            </div>
-            <div class="card">
-                <h3>Community Rewards</h3>
-                <p>Earn $THRPY tokens for positive contributions.</p>
-                <a class="coming-soon">Coming Soon</a>
+                <h3>Personalized AI Psychologist</h3>
+                <p>Choose your counselor's persona for a better experience.</p>
+                <div class="button">Read More</div>
+                <div class="details-section">
+                    <p>Engage with AI psychologists directly in our Telegram group. We’re enhancing this experience to let you personalize your interaction by selecting specific traits, such as the psychologist's gender or communication style. This tailored approach ensures a more comfortable and trusting environment, ultimately enriching your mental health journey.</p>
+                </div>
+                <a href="https://t.me/ThrpyAiChat" class="button">Start Conversation</a>
             </div>
             <div class="card">
                 <h3>Support Network</h3>
-                <p>Connect with like-minded traders and investors.</p>
-                <a class="coming-soon">Coming Soon</a>
+                <p>Join our commuity and connect with like-minded traders and investors.</p>
+                <a href="https://t.me/ThrpyAiChat" class="button">Join Community</a>
             </div>
             <div class="card">
-                <h3>Mindfulness Tools</h3>
-                <p>Meditation and stress management resources.</p>
-                <a class="coming-soon">Coming Soon</a>
+                <h3>Emotional Sentiment Analysis</h3>
+                <p>Analyze emotional trends from social media platforms like X.</p>
+                <div class="button">Read More</div>
+                <div class="details-section">
+                    <p>Leverage advanced NLP models to detect frustration, despair, or optimism in social media posts. Our bot provides actionable insights and recommendations based on user sentiment to enhance mental well-being during crypto market fluctuations.</p>
+                </div>
+            </div>
+            <div class="card">
+                <h3>Community Rewards</h3>
+                <p>Earn $THRPY tokens as a reward for actively contributing to our community.</p>
+                <div class="button">Read More</div>
+                <div class="details-section">
+                    <p>Share your personal journey of overcoming challenges and frustrations in the crypto world. Inspire others, provide support, and build a positive, collaborative environment where mental wellness and financial success go hand in hand.</p>
+                </div>
+            </div>
+            <div class="card">
+                <h3>Maxi - AI Avatar</h3>
+                <p>Engage in video calls with a friendly AI assistant.</p>
+                <div class="button">Read More</div>
+                <div class="details-section">
+                    <p>Maxi, your AI avatar, offers real-time support through video calls. Discuss your concerns and receive tailored advice, just like speaking to a professional counselor. Customize Maxi's persona to suit your preferences.</p>
+                </div>
             </div>
         </div>
     </section>
-
 
     <section class="phases">
         <h2>Development Journey</h2>
