--- a/index.html
+++ b/index.html
@@ -1,277 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>$THRPY - Crypto Mental Wellness</title>
-    <meta property="og:title" content="$THRPY - Crypto Mental Wellness">
-    <meta property="og:description" content="A revolutionary platform combining mental wellness tools with advanced crypto analytics. Take control of your investments while maintaining emotional balance.">
-    <meta name="twitter:image" property="og:image" content="https://www.ai-thrpy.xyz/assets/images/og-image.png">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.ai-thrpy.xyz">
-    <style>
-        body {
-            margin: 0;
-            font-family: 'Poppins', sans-serif;
-            background: #e0e0e0;
-            color: #333333;
-            overflow-y: auto;
-        }
-
-        @keyframes aurora {
-            0% {
-                background-position: 0% 50%;
-            }
-            50% {
-                background-position: 100% 50%;
-            }
-            100% {
-                background-position: 0% 50%;
-            }
-        }
-
-        .background-aurora {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(120deg, rgba(255, 255, 255, 0.7), rgba(173, 216, 230, 0.6), rgba(152, 251, 152, 0.7));
-            background-size: 200% 200%;
-            animation: aurora 15s infinite ease-in-out;
-            filter: blur(20px);
-            z-index: -1;
-        }
-
-        header {
-            text-align: center;
-            padding: 60px;
-            background: rgba(255, 255, 255, 0.8);
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            position: relative;
-            z-index: 10;
-            border-radius: 20px;
-            margin: 20px;
-        }
-        header h1 {
-            font-size: 3em;
-            margin: 0;
-            letter-spacing: 1px;
-            color: #555555;
-        }
-        header p {
-            font-size: 1.5em;
-            margin-top: 10px;
-            color: #777777;
-        }
-        .button {
-            display: inline-block;
-            margin: 20px 10px;
-            padding: 12px 25px;
-            font-size: 1em;
-            color: #555555;
-            background-color: #f0f0f0;
-            border: none;
-            border-radius: 25px;
-            text-decoration: none;
-            font-weight: bold;
-            cursor: pointer;
-            box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.1), inset -2px -2px 5px rgba(255, 255, 255, 0.7);
-            transition: transform 0.2s, background-color 0.3s;
-        }
-        .button:hover {
-            background-color: #ffffff;
-            transform: scale(1.05);
-        }
-        .features, .phases {
-            padding: 40px 20px;
-            text-align: center;
-        }
-        .features h2, .phases h2 {
-            font-size: 2.5em;
-            margin-bottom: 30px;
-            color: #555555;
-        }
-        .grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 30px;
-            padding: 20px;
-        }
-        .card {
-            background: linear-gradient(145deg, #ffffff, #ffffff);
-            padding: 30px;
-            border-radius: 15px;
-            box-shadow: 8px 8px 15px rgba(0, 0, 0, 0.2), -8px -8px 15px rgba(255, 255, 255, 0.7);
-            transition: transform 0.3s, box-shadow 0.3s;
-            position: relative;
-            overflow: hidden;
-        }
-        .card:hover {
-            transform: translateY(-5px);
-            box-shadow: 12px 12px 20px rgba(0, 0, 0, 0.3), -12px -12px 20px rgba(255, 255, 255, 0.8);
-        }
-        .card h3 {
-            font-size: 1.5em;
-            margin-bottom: 15px;
-            color: #555555;
-        }
-        .card p {
-            font-size: 1.1em;
-            color: #777777;
-        }
-        .card .details-section {
-            max-height: 0;
-            overflow: hidden;
-            background: inherit;
-            padding: 0 20px;
-            border-top: 1px solid #ccc;
-            border-radius: 0 0 15px 15px;
-            box-shadow: inset 4px 4px 8px rgba(0, 0, 0, 0.1), inset -4px -4px 8px rgba(255, 255, 255, 0.7);
-            transition: max-height 0.4s ease, padding 0.4s ease;
-        }
-        .card.open .details-section {
-            max-height: 300px;
-            padding: 20px;
-        }
-        .card .button {
-            margin-top: 15px;
-            cursor: pointer;
-            font-size: 1em;
-            color: #555555;
-            /* text-decoration: underline; */
-            transition: color 0.3s;
-        }
-        /* .card .toggle:hover {
-            color: #333333;
-        } */
-        .card .coming-soon {
-            display: block;
-            margin-top: 15px;
-            font-size: 1.1em;
-            color: #999999;
-            text-align: center;
-        }
-        footer {
-            text-align: center;
-            padding: 20px;
-            font-size: 1em;
-            background: rgba(255, 255, 255, 0.8);
-            color: #777777;
-            margin-top: 40px;
-            position: relative;
-            z-index: 10;
-            border-radius: 20px;
-            margin: 20px;
-        }
-        footer a {
-            color: #555555;
-            text-decoration: none;
-            margin: 0 15px;
-            transition: color 0.3s;
-        }
-        footer a:hover {
-            color: #333333;
-        }
-    </style>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            document.querySelectorAll('.card').forEach(card => {
-                const toggle = card.querySelector('.button');
-                if (toggle) {
-                    toggle.addEventListener('click', () => {
-                        card.classList.toggle('open');
-                    });
-                }
-            });
-        });
-    </script>
-</head>
-<body>
-    <div class="background-aurora"></div>
-    <header>
-        <h1>$THRPY</h1>
-        <p>Take a Break from Crypto Drama</p>
-        <a href="https://t.me/ThrpyAiChat" class="button">Join Community</a>
-        <a href="https://app.hypurr.fun/launch/1884" class="button">Learn More</a>
-    </header>
-
-    <section class="features">
-        <h2>Explore Features</h2>
-        <div class="grid">
-            <div class="card">
-                <h3>Personalized AI Psychologist</h3>
-                <p>Choose your counselor's persona for a better experience.</p>
-                <div class="button">Read More</div>
-                <div class="details-section">
-                    <p>Engage with AI psychologists directly in our Telegram group. We’re enhancing this experience to let you personalize your interaction by selecting specific traits, such as the psychologist's gender or communication style. This tailored approach ensures a more comfortable and trusting environment, ultimately enriching your mental health journey.</p>
-                </div>
-                <a href="https://t.me/ThrpyAiChat" class="button">Start Conversation</a>
-            </div>
-            <div class="card">
-                <h3>Support Network</h3>
-                <p>Join our commuity and connect with like-minded traders and investors.</p>
-                <a href="https://t.me/ThrpyAiChat" class="button">Join Community</a>
-            </div>
-            <div class="card">
-                <h3>Emotional Sentiment Analysis</h3>
-                <p>Analyze emotional trends from social media platforms like X.</p>
-                <div class="button">Read More</div>
-                <div class="details-section">
-                    <p>Leverage advanced NLP models to detect frustration, despair, or optimism in social media posts. Our bot provides actionable insights and recommendations based on user sentiment to enhance mental well-being during crypto market fluctuations.</p>
-                </div>
-            </div>
-            <div class="card">
-                <h3>Community Rewards</h3>
-                <p>Earn $THRPY tokens as a reward for actively contributing to our community.</p>
-                <div class="button">Read More</div>
-                <div class="details-section">
-                    <p>Share your personal journey of overcoming challenges and frustrations in the crypto world. Inspire others, provide support, and build a positive, collaborative environment where mental wellness and financial success go hand in hand.</p>
-                </div>
-            </div>
-            <div class="card">
-                <h3>Maxi - AI Avatar</h3>
-                <p>Engage in video calls with a friendly AI assistant.</p>
-                <div class="button">Read More</div>
-                <div class="details-section">
-                    <p>Maxi, your AI avatar, offers real-time support through video calls. Discuss your concerns and receive tailored advice, just like speaking to a professional counselor. Customize Maxi's persona to suit your preferences.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="phases">
-        <h2>Development Journey</h2>
-        <div class="grid">
-            <div class="card">
-                <h3>Phase 1: Foundation</h3>
-                <p>Community building, token launch, and basic sentiment analysis.</p>
-                <div class="button">Read More</div>
-                <div class="details-section">
-                    <p>In this phase, we focus on establishing the foundational elements of our platform, including launching the $THRPY token and initial community building efforts. Basic sentiment analysis tools are also rolled out to enable users to gain early insights into market trends.</p>
-                </div>
-            </div>
-            <div class="card">
-                <h3>Phase 2: Growth</h3>
-                <p>Advanced sentiment analysis and enhanced features.</p>
-                <div class="button">Read More</div>
-                <div class="details-section">
-                    <p>The growth phase introduces advanced sentiment analysis tools powered by AI, along with enhanced features designed to improve user experience. Community expansion and feature updates will be a key focus in this phase.</p>
-                </div>
-            </div>
-            <div class="card">
-                <h3>Phase 3: Expansion</h3>
-                <p>Mobile app launch, cross-chain compatibility, and AI integration.</p>
-                <div class="button">Read More</div>
-                <div class="details-section">
-                    <p>The expansion phase includes the launch of a mobile app for better accessibility, cross-chain compatibility to cater to diverse blockchain ecosystems, and deep integration of AI-driven tools for personalized insights.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <footer>
-        <p>&copy; 2024 Therapy ($THRPY). All rights reserved. <a href="https://x.com/AiThrpyonHL">Twitter</a> | <a href="https://t.me/ThrpyAiChat">Telegram</a></p>
-    </footer>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><title>$THRPY - Crypto Mental Wellness</title><meta property="og:title" content="$THRPY - Crypto Mental Wellness"><meta property="og:description" content="A revolutionary platform combining mental wellness tools with advanced crypto analytics. Take control of your investments while maintaining emotional balance."><meta name="twitter:image" property="og:image" content="https://www.ai-thrpy.xyz/assets/images/og-image.png"><meta property="og:type" content="website"><meta property="og:url" content="https://www.ai-thrpy.xyz"><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><script defer="defer" src="/static/js/main.75d7116a.js"></script><link href="/static/css/main.6a72515e.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
