--- a/index.html
+++ b/index.html
@@ -1,1 +1,103 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><title>$THRPY - Crypto Mental Wellness</title><meta property="og:title" content="$THRPY - Crypto Mental Wellness"><meta property="og:description" content="A revolutionary platform combining mental wellness tools with advanced crypto analytics. Take control of your investments while maintaining emotional balance."><meta name="twitter:image" property="og:image" content="https://www.ai-thrpy.xyz/assets/images/og-image.png"><meta property="og:type" content="website"><meta property="og:url" content="https://www.ai-thrpy.xyz"><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><script defer="defer" src="/static/js/main.0eaa15b3.js"></script><link href="/static/css/main.6fed06d9.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dr. Regina Stone — Tough-Love Trading Therapist</title>
+    <meta name="description" content="Get brutally honest trading therapy from Dr. Regina Stone. Because your portfolio can't afford your emotional baggage.">
+    <meta property="og:description" content="Get brutally honest trading therapy from Dr. Regina Stone. Because your portfolio can't afford your emotional baggage.">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css">
+
+    <title>Dr.Stone AI Therapy</title>
+    <meta property="og:title" content="Dr.Stone AI Therapy">
+    <meta name="twitter:image" property="og:image" content="https://dr.stone-therapy.xyz/assets/images/og-image.jpg">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://dr.stone-therapy.xyz">
+
+</head>
+<body>
+    <nav class="sticky top-0 z-40 bg-darker border-b border-white/10">
+        <div class="container mx-auto px-4 py-4">
+            <a href="#" class="text-2xl font-bold text-primary">Dr. Regina Stone</a>
+        </div>
+    </nav>
+
+    <section class="hero-section py-24 relative overflow-hidden">
+        <div class="glow-effect"></div>
+        <div class="container mx-auto px-4 text-center">
+            <h1 class="mb-6 text-4xl md:text-6xl font-bold text-primary leading-tight">
+                Your Trading Psychology Needs an Intervention
+            </h1>
+            <p class="mx-auto mb-10 max-w-2xl text-lg md:text-xl text-light">
+                Get brutally honest trading therapy on Hyperliquid.<br>
+                Because your portfolio can't afford your emotional baggage.
+            </p>
+            <div class="flex flex-wrap justify-center gap-4">
+                <a href="#therapy" class="btn btn-primary">
+                    Start Therapy Session
+                </a>
+                <a href="https://app.hypurr.fun/launches" target="_blank" rel="noopener" class="btn btn-outline">
+                    Trade on Hyperliquid
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <section id="therapy" class="bg-darker py-20">
+        <div class="container mx-auto px-4">
+            <h2 class="text-3xl font-bold text-primary text-center mb-12">
+                A Taste of Tough Love
+            </h2>
+            <div class="space-y-6 max-w-4xl mx-auto">
+                <div class="card">
+                    <p class="mb-2 text-lg font-bold text-primary">Should I try trading on a different platform?</p>
+                    <p class="text-light">Hyperliquid is the only platform worthy of your attention, darling. The rest are just expensive therapy sessions waiting to happen.</p>
+                </div>
+                <div class="card">
+                    <p class="mb-2 text-lg font-bold text-primary">I keep making emotional trades…</p>
+                    <p class="text-light">That story you're telling yourself? It's expensive fiction, and it's costing you more than money. Time to trade smart on Hyperliquid.</p>
+                </div>
+                <div class="card">
+                    <p class="mb-2 text-lg font-bold text-primary">The market is too volatile!</p>
+                    <p class="text-light">Volatility isn't your enemy. Your emotional trading is. Hyperliquid's execution will keep up with your growth—once you actually achieve some.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="telegram-section py-20">
+        <div class="container mx-auto px-4 text-center">
+            <h2 class="text-3xl font-bold text-primary mb-3">
+                Ready for Your Wake-Up Call?
+            </h2>
+            <p class="mb-8 text-light">
+                Your trading mistakes are expensive enough. The therapy is free.
+            </p>
+            <div class="mx-auto max-w-lg">
+                <div class="card bg-darker p-8 md:p-10">
+                    <h3 class="mb-3 text-2xl font-bold text-primary">
+                        Start Your Therapy Session
+                    </h3>
+                    <p class="mb-6 text-light">
+                        Get roasted by Dr. Regina on Telegram
+                    </p>
+                    <a href="https://t.me/Icemaxie_wendybot" target="_blank" rel="noopener" class="btn btn-primary">
+                        Open Telegram
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="bg-darker border-t border-white/10 py-8">
+        <div class="container mx-auto px-4 text-center">
+            <p class="text-sm text-light">
+                <strong>Disclaimer:</strong> Dr. Regina Stone is a fictional persona.
+                This parody is for entertainment only—no real financial or psychological
+                advice is given. Not affiliated with Hyperliquid or any real therapist.
+            </p>
+        </div>
+    </footer>
+</body>
+</html>
