--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <p class="mb-6 text-light">
                         Get roasted by Dr. Regina on Telegram
                     </p>
-                    <a href="https://t.me/Icemaxie_wendybot" target="_blank" rel="noopener" class="btn btn-primary">
+                    <a href="https://t.me/dr.stone-therapy-bot" target="_blank" rel="noopener" class="btn btn-primary">
                         Open Telegram
                     </a>
                 </div>
